# OOP_2_uzd

./: .gitignore  CMakeLists.txt  Makefile  README.md  et --hard HEAD@{4}
html/: __deps_2googletest-src_2_c_o_n_t_r_i_b_u_t_i_n_g_8md.html  __deps_2googletest-src_2docs_2advanced_8md.html  __deps_2googletest-src_2docs_2community__created__documentation_8md.html  __deps_2googletest-src_2docs_2faq_8md.html  __deps_2googletest-src_2docs_2gmock__cheat__sheet_8md.html  __deps_2googletest-src_2docs_2gmock__cook__book_8md.html  __deps_2googletest-src_2docs_2gmock__faq_8md.html  __deps_2googletest-src_2docs_2gmock__for__dummies_8md.html  __deps_2googletest-src_2docs_2index_8md.html  __deps_2googletest-src_2docs_2pkgconfig_8md.html  __deps_2googletest-src_2docs_2platforms_8md.html  __deps_2googletest-src_2docs_2primer_8md.html  __deps_2googletest-src_2docs_2quickstart-bazel_8md.html  __deps_2googletest-src_2docs_2quickstart-cmake_8md.html  __deps_2googletest-src_2docs_2reference_2actions_8md.html  __deps_2googletest-src_2docs_2reference_2assertions_8md.html  __deps_2googletest-src_2docs_2reference_2matchers_8md.html  __deps_2googletest-src_2docs_2reference_2mocking_8md.html  __deps_2googletest-src_2docs_2reference_2testing_8md.html  __deps_2googletest-src_2docs_2samples_8md.html  __deps_2googletest-src_2googlemock_2include_2gmock_2gmock-actions_8h.html  __deps_2googletest-src_2googlemock_2include_2gmock_2gmock-actions_8h.js  __deps_2googletest-src_2googlemock_2include_2gmock_2gmock-actions_8h_source.html  __deps_2googletest-src_2googlemock_2include_2gmock_2gmock-cardinalities_8h.html  __deps_2googletest-src_2googlemock_2include_2gmock_2gmock-cardinalities_8h.js  __deps_2googletest-src_2googlemock_2include_2gmock_2gmock-cardinalities_8h_source.html  __deps_2googletest-src_2googlemock_2include_2gmock_2gmock-function-mocker_8h.html  __deps_2googletest-src_2googlemock_2include_2gmock_2gmock-function-mocker_8h.js  __deps_2googletest-src_2googlemock_2include_2gmock_2gmock-function-mocker_8h_source.html  __deps_2googletest-src_2googlemock_2include_2gmock_2gmock-matchers_8h.html  __deps_2googletest-src_2googlemock_2include_2gmock_2gmock-matchers_8h.js  __deps_2googletest-src_2googlemock_2include_2gmock_2gmock-matchers_8h_source.html  __deps_2googletest-src_2googlemock_2include_2gmock_2gmock-more-actions_8h.html  __deps_2googletest-src_2googlemock_2include_2gmock_2gmock-more-actions_8h.js  __deps_2googletest-src_2googlemock_2include_2gmock_2gmock-more-actions_8h_source.html  __deps_2googletest-src_2googlemock_2include_2gmock_2gmock-more-matchers_8h.html  __deps_2googletest-src_2googlemock_2include_2gmock_2gmock-more-matchers_8h.js  __deps_2googletest-src_2googlemock_2include_2gmock_2gmock-more-matchers_8h_source.html  __deps_2googletest-src_2googlemock_2include_2gmock_2gmock-nice-strict_8h.html  __deps_2googletest-src_2googlemock_2include_2gmock_2gmock-nice-strict_8h.js  (+3492 more)
include/: calculations.h  fileHandling.h  meniu.h  output.h  person.h  student.h  vector.h
latex/: __deps_2googletest-src_2_c_o_n_t_r_i_b_u_t_i_n_g_8md.tex  __deps_2googletest-src_2docs_2advanced_8md.tex  __deps_2googletest-src_2docs_2community__created__documentation_8md.tex  __deps_2googletest-src_2docs_2faq_8md.tex  __deps_2googletest-src_2docs_2gmock__cheat__sheet_8md.tex  __deps_2googletest-src_2docs_2gmock__cook__book_8md.tex  __deps_2googletest-src_2docs_2gmock__faq_8md.tex  __deps_2googletest-src_2docs_2gmock__for__dummies_8md.tex  __deps_2googletest-src_2docs_2index_8md.tex  __deps_2googletest-src_2docs_2pkgconfig_8md.tex  __deps_2googletest-src_2docs_2platforms_8md.tex  __deps_2googletest-src_2docs_2primer_8md.tex  __deps_2googletest-src_2docs_2quickstart-bazel_8md.tex  __deps_2googletest-src_2docs_2quickstart-cmake_8md.tex  __deps_2googletest-src_2docs_2reference_2actions_8md.tex  __deps_2googletest-src_2docs_2reference_2assertions_8md.tex  __deps_2googletest-src_2docs_2reference_2matchers_8md.tex  __deps_2googletest-src_2docs_2reference_2mocking_8md.tex  __deps_2googletest-src_2docs_2reference_2testing_8md.tex  __deps_2googletest-src_2docs_2samples_8md.tex  __deps_2googletest-src_2googlemock_2include_2gmock_2gmock-actions_8h.tex  __deps_2googletest-src_2googlemock_2include_2gmock_2gmock-actions_8h_source.tex  __deps_2googletest-src_2googlemock_2include_2gmock_2gmock-cardinalities_8h.tex  __deps_2googletest-src_2googlemock_2include_2gmock_2gmock-cardinalities_8h_source.tex  __deps_2googletest-src_2googlemock_2include_2gmock_2gmock-function-mocker_8h.tex  __deps_2googletest-src_2googlemock_2include_2gmock_2gmock-function-mocker_8h_source.tex  __deps_2googletest-src_2googlemock_2include_2gmock_2gmock-matchers_8h.tex  __deps_2googletest-src_2googlemock_2include_2gmock_2gmock-matchers_8h_source.tex  __deps_2googletest-src_2googlemock_2include_2gmock_2gmock-more-actions_8h.tex  (+2289 more)
(+3218 files in other folders)
